# speedfog-racing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md
mod/: Cargo.toml  build.rs  speedfog_race.toml.example
mod/src/: lib.rs
mod/src/core/: animations.rs  color.rs  constants.rs  entity_utils.rs  format.rs  io_traits.rs  map_utils.rs  mod.rs  protocol.rs  race_protocol.rs  session.rs  status_template.rs  traits.rs  types.rs  warp_tracker.rs
mod/src/dll/: config.rs  death_icon.rs  frame_state.rs  hotkey.rs  icon_atlas.rs  log_reader.rs  logging.rs  mod.rs  race_tracker.rs  race_ui.rs  race_websocket.rs  tracker.rs  ui.rs  websocket.rs
mod/src/eldenring/: event_flags.rs  game_man.rs  game_state.rs  item_spawner.rs  memory.rs  mod.rs  sp_effect.rs  warp_hook.rs
server/: .env.example  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 052c6d411564_add_has_seed_pack_to_participant.py  1aaa8287c0fc_add_last_igt_change_at_to_participant.py  2b52ea6a7eb4_add_training_sessions_table.py  30abc306ca1a_add_started_at_to_race.py  3a3d9111c571_add_current_zone_to_training_sessions.py  525e2a1a06b2_add_overlay_settings_to_users.py  72251e529594_drop_has_seed_pack_and_update_seed_.py  736fc1ba38f3_add_seeds_released_at_to_race.py  79a7011ea3fb_add_locale_column_to_users.py  7bce465612ca_change_seed_number_from_integer_to_.py  7ced72467b12_add_open_registration_and_max_.py  8663dfafb132_use_timezone_aware_datetime_columns.py  882a8df28326_add_caster_table_and_participant_color_.py  a1b2c3d4e5f6_add_discarded_to_seedstatus_enum.py  a2dc7553c456_add_is_public_to_race.py  afe8e80417ef_add_exclude_from_stats_to_training_.py  b2c3d4e5f6a7_add_scheduled_at_to_races.py  c4f08502a666_merge_draft_open_to_setup.py  e2bd973f46cb_add_discord_event_id_to_race.py  e9099620f295_add_version_column_to_race_for_.py  f14cb23163f8_initial_schema.py  f1eb2796d7a7_add_organizer_role_and_last_seen_to_user.py
server/data/: fog.txt  graces.json  submaps.txt
server/data/i18n/: fr.toml
server/speedfog_racing/: __init__.py  auth.py  config.py  database.py  discord.py  main.py  models.py  rate_limit.py  schemas.py
server/speedfog_racing/api/: __init__.py  admin.py  auth.py  discord.py  helpers.py  i18n.py  invites.py  pools.py  races.py  site.py  training.py  users.py
server/speedfog_racing/services/: __init__.py  grace_service.py  i18n.py  inactivity_monitor.py  layer_service.py  race_lifecycle.py  seed_pack_service.py  seed_service.py  training_service.py  twitch_live.py  zip_service.py  zone_resolver.py
server/speedfog_racing/websocket/: __init__.py  (+8 more)
server/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_casters.py  test_dashboard_api.py  test_discord.py  test_discord_events_integration.py  test_discord_interactions.py  test_grace_service.py  test_health.py  test_i18n.py  test_inactivity_monitor.py  test_integration.py  test_invites.py  test_layer_service.py  test_open_registration.py  test_overlay_settings.py  test_pool_stats.py  test_race_lifecycle.py  test_races.py  test_scheduled_at.py  test_seed_pack_service.py  test_seed_release.py  test_seed_service.py  test_site_config.py  test_spectator_auth.py  test_training.py  test_twitch_live.py  test_user_profile.py  test_user_search.py  test_websocket.py  test_zip_service.py  test_zone_resolver.py
(+209 files in other folders)
