[package]
name = "speedfog-race-mod"
version = "1.3.2"
edition = "2021"
authors = ["wospins"]
license = "AGPL-3.0"
repository = "https://github.com/rbignon/speedfog-racing"
description = "SpeedFog Racing mod for Elden Ring"

[lib]
crate-type = ["cdylib", "rlib"]
name = "speedfog_race_mod"

# =============================================================================
# CROSS-PLATFORM DEPENDENCIES (work on Linux and Windows)
# =============================================================================

[dependencies]
# --- Utilities ---
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1.19.0"
parking_lot = "0.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# --- WebSocket client for race server ---
tungstenite = { version = "0.21", features = ["native-tls"] }
crossbeam-channel = "0.5"

# =============================================================================
# WINDOWS-ONLY DEPENDENCIES
# =============================================================================

[target.'cfg(windows)'.dependencies]
# --- libeldenring from your fork ---
libeldenring = { git = "https://github.com/veeenu/eldenring-practice-tool", tag = "1.9.4" }

# --- hudhook for ImGui overlay (includes imgui as transitive dependency) ---
hudhook = { version = "0.7.0", features = ["dx12", "inject"], default-features = false }

# --- retour for function hooking (warp detection) ---
retour = { version = "0.3", default-features = false }

# --- Windows API ---
[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Com",
]

[dev-dependencies]
# For tests

[profile.release]
strip = "symbols"
lto = true
