[project]
name = "speedfog-racing"
version = "1.3.0"
description = "Competitive racing platform for SpeedFog"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "toml>=0.10",
    "slowapi>=0.1.9",
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "aiosqlite>=0.19",
    "ruff>=0.1",
    "mypy>=1.8",
]

[project.scripts]
speedfog-racing = "speedfog_racing.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30

[tool.mypy]
python_version = "3.11"
strict = true
